--- a/SATracker4thSem/SATracker4thSem.csproj
+++ b/SATracker4thSem/SATracker4thSem.csproj
@@ -107,6 +107,7 @@
     <Compile Include="AddStudent.Designer.cs">
       <DependentUpon>AddStudent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Database.cs" />
     <Compile Include="DeleteStudent.cs">
       <SubType>Form</SubType>
     </Compile>
