--- a/SATracker4thSem/SATracker4thSem.csproj
+++ b/SATracker4thSem/SATracker4thSem.csproj
@@ -126,6 +126,12 @@
     <Compile Include="MarkAttendance.Designer.cs">
       <DependentUpon>MarkAttendance.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyAttendance.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyAttendance.Designer.cs">
+      <DependentUpon>MyAttendance.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
@@ -165,6 +171,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MarkAttendance.resx">
       <DependentUpon>MarkAttendance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyAttendance.resx">
+      <DependentUpon>MyAttendance.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
