--- a/SATracker4thSem/SATracker4thSem.csproj
+++ b/SATracker4thSem/SATracker4thSem.csproj
@@ -132,6 +132,12 @@
     <Compile Include="MyAttendance.Designer.cs">
       <DependentUpon>MyAttendance.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyProfile.Designer.cs">
+      <DependentUpon>MyProfile.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
@@ -174,6 +180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyAttendance.resx">
       <DependentUpon>MyAttendance.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyProfile.resx">
+      <DependentUpon>MyProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
