Forgot Password form done!!!

--- a/SATracker4thSem/SATracker4thSem.csproj
+++ b/SATracker4thSem/SATracker4thSem.csproj
@@ -114,6 +114,12 @@
     <Compile Include="DeleteStudent.Designer.cs">
       <DependentUpon>DeleteStudent.cs</DependentUpon>
     </Compile>
+    <Compile Include="ForgotPasssword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ForgotPasssword.Designer.cs">
+      <DependentUpon>ForgotPasssword.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -183,6 +189,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DeleteStudent.resx">
       <DependentUpon>DeleteStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ForgotPasssword.resx">
+      <DependentUpon>ForgotPasssword.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
