--- a/SATracker4thSem/SATracker4thSem.csproj
+++ b/SATracker4thSem/SATracker4thSem.csproj
@@ -107,6 +107,12 @@
     <Compile Include="AddStudent.Designer.cs">
       <DependentUpon>AddStudent.cs</DependentUpon>
     </Compile>
+    <Compile Include="Dashboard.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Dashboard.Designer.cs">
+      <DependentUpon>Dashboard.cs</DependentUpon>
+    </Compile>
     <Compile Include="Database.cs" />
     <Compile Include="DeleteStudent.cs">
       <SubType>Form</SubType>
@@ -186,6 +192,9 @@
     </Compile>
     <EmbeddedResource Include="AddStudent.resx">
       <DependentUpon>AddStudent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Dashboard.resx">
+      <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="DeleteStudent.resx">
       <DependentUpon>DeleteStudent.cs</DependentUpon>
